--- a/API PIXABAY/index.html
+++ b/API PIXABAY/index.html
@@ -17,6 +17,12 @@
   <button type="submit">Buscar</button>
 </form>
 
+<div id="imageModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="expandedImg">
+</div>
+
+
 <div id="results"></div>
 
 </body>
